cli/tests/snapshots/integration__run_file@check_eq.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
STDERR
warning: Unused private function
  ┌─ /src/check_eq.gleam:3:1
  │
3 │ fn ignore_examples() {
  │ ^^^^^^^^^^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.

error: Module does not have a main function

`check_eq` does not have a main function so the module can not be run.

Hint: Add a public `main` function to `src/check_eq.gleam`.
