cli/tests/snapshots/integration__run_file@check_true_false.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
STDERR
error: Module does not have a main function

`check_true_false` does not have a main function so the module can not be run.

Hint: Add a public `main` function to `src/check_true_false.gleam`.
