cli/tests/snapshots/integration__run_file@gleam.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
STDERR
Ignoring `gleam.gleam`: `gleam` is a reserved module name.
