cli/tests/snapshots/integration__run_file@main_empty.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Error at main_empty.gleam (main:1)
  `todo` expression evaluated. This code has not yet been implemented.
STDERR
warning: Unimplemented function
  ┌─ /src/main_empty.gleam:1:1
  │
1 │ pub fn main() {}
  │ ^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
