cli/tests/snapshots/integration__run_file@main_erlang.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
STDERR
error: Target not supported

`main_erlang` has a main function, but it does not support the JavaScript
target, so it cannot be run.
