cli/tests/snapshots/integration__run_file@main_panic.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Error at main_panic.gleam (main:2)
  `panic` expression evaluated.
STDERR
