cli/tests/snapshots/integration__run_file@main_stackoverflow.gleam.snap
---
source: cli/tests/integration.rs
---
STDOUT
Stack overflow
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  at f (/build/main_stackoverflow.mjs:2:15)
  ...
STDERR
